# pathfinding-playground

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: debug.json
algorithms/example/: Cargo.toml
algorithms/example/src/: lib.rs
src/: api.rs  cursor.rs  goals.rs  main.rs  map.rs  ui.rs  wasm.rs
src/components/: button.rs  checkbox.rs  mod.rs  separator.rs  slider.rs  text.rs
wit/: world.wit
